feat: add application icon and improve Linux native packaging with desktop integration scripts