@@ -1,106 +1,90 @@
-# Panduan Instalasi yo-wg untuk Linux
+# Panduan Instalasi Yo-WG untuk Linux
 
-Aplikasi **yo-wg** adalah manajer WireGuard berbasis JavaFX yang memungkinkan Anda mengelola konfigurasi WireGuard, mengedit akses, dan resources dengan mudah. Berikut adalah langkah-langkah untuk menginstal dan menjalankan aplikasi ini di Linux.
+Aplikasi **Yo-WG** adalah manajer WireGuard berbasis JavaFX yang memungkinkan Anda mengelola konfigurasi WireGuard, Access Servers, dan Resources dengan mudah.
 
-## Prasyarat (Prerequisites)
+---
 
-Sebelum memulai, pastikan sistem Anda memiliki paket-paket berikut:
+## 1. Instalasi Pengguna (Menggunakan Paket `.deb`)
 
-1.  **Java JDK 21**: Aplikasi ini dibangun menggunakan Java 21.
-    ```bash
-    sudo apt update
-    sudo apt install openjdk-21-jdk
-    ```
-2.  **Maven**: Untuk membuild proyek.
-    ```bash
-    sudo apt install maven
-    ```
-3.  **WireGuard**: Inti dari fungsionalitas aplikasi.
-    ```bash
-    sudo apt install wireguard
-    ```
-4.  **GNOME Terminal**: Aplikasi menggunakan `gnome-terminal` untuk membuka sesi SSH dan Ping.
-    ```bash
-    sudo apt install gnome-terminal
-    ```
+Metode ini adalah cara paling mudah untuk menginstal **Yo-WG** di Debian, Ubuntu, Linux Mint, Pop!_OS, dan distro turunan Debian lainnya. Paket `.deb` sudah mengemas Java Runtime (JRE), sehingga Anda **tidak perlu menginstal Java secara manual**.
 
-## Langkah 1: Build Aplikasi
-
-1.  Clone atau download source code proyek ini.
-2.  Buka terminal di direktori root proyek.
-3.  Jalankan perintah Maven untuk membuild aplikasi:
-
-    ```bash
-    mvn clean package
-    ```
-
-    Atau jika Anda menggunakan wrapper yang disertakan:
-
-    ```bash
-    ./mvnw clean package
-    ```
-
-    Setelah proses selesai, file JAR akan tersedia di folder `target/`, misalnya: `target/yo-wg-1.0-SNAPSHOT-jar-with-dependencies.jar`.
-
-## Langkah 2: Persiapan Direktori dan Konfigurasi
-
-Aplikasi ini mengharapkan struktur direktori tertentu di folder home user Anda (`~/Program/yo-wg`).
-
-1.  **Buat struktur direktori**:
-
-    ```bash
-    mkdir -p ~/Program/yo-wg/conf
-    mkdir -p ~/Program/yo-wg/lib
-    ```
-
-    - `~/Program/yo-wg/conf`: Menyimpan file konfigurasi aplikasi.
-    - `~/Program/yo-wg/lib`: Menyimpan database SQLite (`database.db`). Database akan dibuat otomatis jika belum ada.
-
-2.  **Buat File Konfigurasi**:
-    Buat file bernama `application.conf` di dalam folder `~/Program/yo-wg/conf/`.
-
-    ```bash
-    nano ~/Program/yo-wg/conf/application.conf
-    ```
-
-    Isi file tersebut dengan konfigurasi berikut:
-
-    ```hocon
-    app {
-        # PASSWORD ROOT/SUDO ANDA
-        # PERINGATAN: Password ini disimpan dalam plain text. Pastikan file ini aman.
-        # Password ini digunakan untuk menjalankan perintah wg-quick dan iptables
-        password = "password_sudo_anda"
-
-        # Daftar interface WireGuard yang ingin dikelola
-        list_wg = ["wg0", "wg1"]
-    }
-    ```
-
-    > **PENTING**: Aplikasi ini membutuhkan hak akses root untuk menjalankan perintah `wg-quick` dan memodifikasi file di `/etc/wireguard`.
-
-## Langkah 3: Menjalankan Aplikasi
-
-Setelah build selesai dan konfigurasi siap, Anda dapat menjalankan aplikasi menggunakan perintah sederhana:
+### Prasyarat Sistem
+Buka terminal dan pastikan paket-paket pendukung sistem berikut sudah terinstall:
 
 ```bash
+sudo apt update
+sudo apt install wireguard gnome-terminal sshpass
+```
+
+### Langkah Instalasi
+1. Unduh file `yo-wg_1.0.0_amd64.deb` dari halaman [Releases](https://github.com/ryandiaziz/yo-wg/releases) atau direktori `dist/`.
+2. Buka terminal di folder tempat file `.deb` berada, lalu jalankan:
+
+```bash
+sudo apt install ./yo-wg_1.0.0_amd64.deb
+```
+*(Atau menggunakan `sudo dpkg -i yo-wg_1.0.0_amd64.deb`)*
+
+3. Setelah proses instalasi selesai, aplikasi **Yo-WG** akan tersedia di menu aplikasi OS Anda (`/opt/yo-wg/`) dan siap dijalankan.
+
+---
+
+## 2. Penggunaan Pertama Kali (Initial Setup)
+
+1. Buka aplikasi **Yo-WG** dari menu aplikasi atau jalankan perintah `yo-wg` di terminal.
+2. Saat pertama kali dibuka, jendela **Initial Setup** akan muncul meminta password `sudo` sistem Anda.
+3. Masukkan password `sudo` Anda dan klik **Save Password**. Password ini disimpan secara lokal di database aplikasi (`~/.local/share/yo-wg/database.db`) untuk mengotomatisasi perintah WireGuard (`wg-quick up/down`).
+4. Aplikasi akan secara otomatis mendeteksi dan mengimpor seluruh file konfigurasi WireGuard yang ada di `/etc/wireguard/*.conf`.
+
+---
+
+## 3. Build dari Source Code (Khusus Developer)
+
+Jika Anda ingin melakukan kompilasi atau mengembangkan proyek dari *source code*:
+
+### Prasyarat Build
+- **Java JDK 21+**
+- **Maven 3.8+**
+
+```bash
+sudo apt update
+sudo apt install openjdk-21-jdk maven wireguard gnome-terminal sshpass
+```
+
+### Membangun Paket `.deb` (Native Package)
+Untuk memaketkan proyek menjadi file `.deb` menggunakan `jpackage`:
+
+```bash
+./scripts/build-deb.sh
+```
+Hasil paket `.deb` akan disimpan di `dist/yo-wg_1.0.0_amd64.deb`.
+
+### Menjalankan Mode Development
+Untuk menjalankan aplikasi langsung dari terminal dalam mode development:
+
+```bash
+mvn clean compile javafx:run
+```
+
+Atau membuat executable Fat JAR:
+
+```bash
+mvn clean package
 java -jar target/yo-wg-1.0-SNAPSHOT-jar-with-dependencies.jar
 ```
 
-Catatan:
+---
 
-- Pastikan Anda menjalankan perintah ini dari root folder project Anda, atau sesuaikan path ke file jar.
-- Tidak perlu lagi menambahkan parameter `--module-path` atau `--add-modules` karena aplikasi sudah dipackage dengan dependensi yang benar (menggunakan launcher).
+## 4. Lokasi File & Data Penting
 
-## Struktur File Penting
+- **Database Aplikasi**: `~/.local/share/yo-wg/database.db` (Dibuat otomatis).
+- **Kunci SSH Shared**: `~/.ssh/yo-wg/id_yowg_shared` (Digunakan untuk fitur autologin SSH).
+- **Konfigurasi WireGuard Sistem**: `/etc/wireguard/*.conf`.
 
-- **Database**: `~/Program/yo-wg/lib/database.db` (Dibuat otomatis saat pertama kali dijalankan).
-- **Config**: `~/Program/yo-wg/conf/application.conf`.
-- **WireGuard Configs**: Aplikasi akan membaca dan menulis ke `/etc/wireguard/`.
+---
 
-## Troubleshooting
+## 5. Troubleshooting
 
-- **Error: Directory /etc/wireguard does not exist**: Pastikan WireGuard terinstall (`sudo apt install wireguard`).
-- **Terminal tidak muncul**: Pastikan `gnome-terminal` terinstall.
-- **Permission Denied**: Pastikan password di `application.conf` benar dan user Anda memiliki akses sudo.
-- **JavaFX Error**: Jika Anda menggunakan text-only setup (server tanpa GUI), aplikasi ini (JavaFX) tidak akan berjalan. Pastikan Anda berada di lingkungan Desktop (GNOME/KDE/dll).
+- **Gagal Mengontrol Tunnel WireGuard**: Pastikan paket `wireguard` terinstall dan password `sudo` yang Anda masukkan saat *Initial Setup* sudah benar. Anda dapat mengubah password sudo di menu **Settings** pada sidebar aplikasi.
+- **Fitur Deploy SSH Key Gagal**: Pastikan `sshpass` terinstall (`sudo apt install sshpass`).
+- **Terminal SSH / Ping Tidak Muncul**: Pastikan `gnome-terminal` terinstall (`sudo apt install gnome-terminal`).
